# CIXSummerSchool2024

./: .gitmodules  LICENSE  README.md
Day_2_Lecture_1_Feit_Bello/: README.md  cix_2024_belo_feit.ipynb
Day_2_Lecture_2_Swearngin/: (Bonus) Train Screen Similarity.ipynb  .gitignore  1. Train_Screen_Recognizer_VINS.ipynb  2. Evaluate_Screen_Recognizer_VINS.ipynb  3. Complete_Screen_Recognizer - Adding Icons using Clip, Formatting Output.ipynb  4. Train Screen Classifier.ipynb  5. Evaluate Screen Classifier.ipynb  6. UI_Detection_LLM.ipynb  README.md  requirements.txt  tokens.json
Day_2_Lecture_2_Swearngin/downloads/: downloader.py
Day_2_Lecture_2_Swearngin/screenclassification/: ui_datasets.py  ui_models.py
Day_2_Lecture_2_Swearngin/screensim/: ui_datasets.py  (+1 more)
Day_3_Lecture_4_Dudley/: .gitignore  HandGestures.ipynb  TextEntry.ipynb  index.ipynb  requirements.txt
Day_4_Lecture_5_Bailly/: README.md  model_evaluation_exercice.ipynb  requierments.txt
Day_4_Lecture_6_Ramos/: .gitignore  pyproject.toml
Day_4_Lecture_6_Ramos/notebooks/: 01_using_llms.ipynb  02_using_embeddings.ipynb  03_using_agents.ipynb  04_Sensemaking.ipynb  05_Ideation.ipynb  06_Metacognition.ipynb  Readme.md  bookmarks.html  dummy.html  html_utils.ipynb  parsebookmarks.ipynb  secrets-example.json  using_agents.ipynb  using_embeddings.ipynb  using_llms.ipynb
Day_4_Lecture_6_Ramos/notebooks/documents/: Airport_Security_Experiences.html  Job_Search_Services.html  Mental_Health_Apps.html  Personal_Finance_Management.html  Personal_Fitness_Tracker.html
Day_5_Lecture_7_ Williamson/: readme.md
(+34 files in other folders)
